--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scope-to-do",
   "version": "1.0.0",
-  "description": "Your Figma widget",
+  "description": "Todoie",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -10,8 +10,8 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@figma/plugin-typings": "^1.43.0",
-    "@figma/widget-typings": "^1.0.3",
+    "@figma/plugin-typings": "^1.57.1",
+    "@figma/widget-typings": "^1.5.0",
     "@types/node": "^16.11.6",
     "@types/uuid": "^8.3.1",
     "css-loader": "^6.5.1",
